snapshots/syntax/statements/objects/mod/call_statement_preserves_whitespace.snap
---
source: src/syntax/statements/objects/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: CallKeyword
          text: Call
        - kind: Whitespace
          text: "  "
        - kind: Identifier
          text: MyFunction
        - kind: Whitespace
          text: " "
        - kind: LeftParenthesis
          text: (
        - kind: Whitespace
          text: "  "
        - kind: Identifier
          text: arg1
        - kind: Whitespace
          text: " "
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: "  "
        - kind: Identifier
          text: arg2
        - kind: Whitespace
          text: "  "
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
