snapshots/syntax/statements/objects/mod/call_statement_with_string_arguments.snap
---
source: src/syntax/statements/objects/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: CallKeyword
          text: Call
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ShowMessage
        - kind: LeftParenthesis
          text: (
        - kind: StringLiteral
          text: "\"Hello, World!\""
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
