snapshots/syntax/statements/objects/mod/multiple_call_statements.snap
---
source: src/syntax/statements/objects/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: CallKeyword
          text: Call
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: First
        - kind: LeftParenthesis
          text: (
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
    - kind: CallStatement
      children:
        - kind: CallKeyword
          text: Call
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Second
        - kind: LeftParenthesis
          text: (
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
    - kind: CallStatement
      children:
        - kind: CallKeyword
          text: Call
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Third
        - kind: LeftParenthesis
          text: (
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
