snapshots/syntax/statements/objects/mod/procedure_call_preserves_whitespace.snap
---
source: src/syntax/statements/objects/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: Identifier
          text: MySub
        - kind: Whitespace
          text: "  "
        - kind: Identifier
          text: arg1
        - kind: Whitespace
          text: " "
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: "  "
        - kind: Identifier
          text: arg2
        - kind: Newline
          text: "\n"
