snapshots/syntax/statements/objects/mod/raiseevent_at_module_level.snap
---
source: src/syntax/statements/objects/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: RaiseEventStatement
      children:
        - kind: RaiseEventKeyword
          text: RaiseEvent
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ProcessComplete
        - kind: Newline
          text: "\n"
